--- a/Backend/Umbraco9.Blazor/wwwroot/index.html
+++ b/Backend/Umbraco9.Blazor/wwwroot/index.html
@@ -21,5 +21,5 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/2.8.0/alpine.js"></script>
 </html>
